fix gutters height and alignment problems

--- a/styles/HolyGrail.module.css
+++ b/styles/HolyGrail.module.css
@@ -59,26 +59,33 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     background: green;
 }
 
 .mainGutterLeft {
+    position: sticky;
+    top: var(--header-height);
     background: blue;
     flex-grow: 1;
-    height: calc(100vh - var(--header-height) - var(--footer-height));
+    margin-top: var(--header-height);
+    min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 .mainBody {
     background: orange;
     width: var(--main-width);
-    height: calc(100vh - var(--header-height) - var(--footer-height));
+    margin-top: var(--header-height);
+    min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 .mainGutterRight {
+    position: sticky;
+    top: var(--header-height);
     background: yellow;
     flex-grow: 1;
-    height: calc(100vh - var(--header-height) - var(--footer-height));
+    margin-top: var(--header-height);
+    min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 .footer {
